cmake_minimum_required(VERSION 2.8)
if (NW_SHARED)
  set(NW_LIBRARY_MODE SHARED)
else ()
  set(NW_LIBRARY_MODE STATIC)
endif ()
set(WSLAY_INCLUDE ${CMAKE_CURRENT_LIST_DIR}/3rdparty/wslay/lib)
set(WSLAY_LIBS wslay)
set(NW_INCLUDE ${CMAKE_CURRENT_LIST_DIR}/lib)
set(NW_LIBS nw pthread)
add_subdirectory(3rdparty)
add_subdirectory(lib)
add_subdirectory(examples)

